1999-12-13  Havoc Pennington  <hp@redhat.com>

	* gnome-cursors.c (gnome_stock_cursor_new): support standard X
	cursors (you can make a stock cursor that specifies their color).

1999-12-13  Havoc Pennington  <hp@redhat.com>

	* gnome-cursors.c: New module, stock cursors from Iain Holmes.

Sun Dec 12 10:57:40 1999  George Lebl <jirka@5z.com>

	* gnome-calculator.c: check for number on stack AFTER we reduce
	  stack, this fixes a segfault where reduce_stack actually did
	  reduce the stack. Fixes bug #4330

1999-12-12  James Henstridge  <james@daa.com.au>

	* libgnomeui.h: include gnome-unit-spinner.h.

	* Makefile.am (EXTRA_DIST): added portrait.xpm and landscape.xpm
	pixmaps for the new gnome-paper-selector.
	(libgnomeui_la_SOURCES): added gnome-unit-spinner.c
	(gnome_headers): added gnome-unit-spinner.h

	* portrait.xpm, landscape.xpm: image files for the new paper selector.
	
	* gnome-paper-selector.[ch]: new paper selector.  It should be source
	source compatible with the old one, but you would probably want to
	modify your code to take advantage of the newer features.
	
	* gnome-unit-spinner.[ch]: new widget.  A GtkSpinButton type widget
	that understands different units.

1999-12-07  Martin Baulig  <martin@home-of-linux.org>

	* Makefile.am: Removed all HistoryDB stuff.

	* libgnomeui.h: Don't include "gnome-compat.h" which does no longer
	exist.

1999-12-05  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-dialog.c (gnome_dialog_button_clicked): no need for saving
	click_closes as gnome_dialog_clicked() takes care of this.
	* Makefile.am: changed all references to gdk-pixbuf/src to
	gdk-pixbuf/gdk-pixbuf.
	
1999-12-04  Elliot Lee  <sopwith@redhat.com>

	* gtkpixmapmenuitem.c: Fix size_request/size_allocate - was HORRIBLY broken before.

1999-12-01  Havoc Pennington  <hp@pobox.com>

	* gnome-canvas-pixbuf.h, gnome-canvas-pixbuf.c: Copy latest
	version from gdk-pixbuf.  gdk-pixbuf has the master copy; do not
	modify this libgnomeui copy.
