@@ -1,0 +1,42 @@
+<gconfschemafile>
+
+<!-- 
+Note: all double hyphens in this comment have a space in the middle
+because double hyphen isn't allowed in comments. So, remove the space
+before use.
+
+To install this file type: 
+      gconftool - -install-schema-file basic-gconf-app.schemas 
+You probably want your "make install" to do this for real applications.
+Also, you probably want a configure option so people can retarget where the 
+schema file gets installed. The option should be called - -gconf-config-source=blah
+To change the gconftool target use the - -config-source=blah option to gconftool.
+-->
+
+    <schemalist>    
+      <schema>
+      <key>/schemas/desktop/gnome/dialog-buttons-style</key>
+      <applyto>/desktop/gnome/dialog-buttons-style</applyto>
+      <owner>libgnomeui</owner>
+      <type>string</type>
+      <default>End</default>
+      <locale name="C">
+        <short>How to arrange the buttons in GNOME dialogs</short>
+
+        <long>There are five possible values for this setting: "Default",
+        "Spread", "Edge", "Start", and "End". </long>
+      </locale>
+
+      <locale name="no">
+        <short>short description in Norway</short>
+        <long>Long description in Norway. long long long. this is a long sentence.</long>
+      </locale>
+    </schema>
+
+  </schemalist>
+  
+</gconfschemafile>
+
+
+
+
